# Logo

./: CMakeLists.txt  README.md
include/: defines.h
src/: color.c  coordinates.c  image.c  main.c  thunder.c
